--- a/notebooks/Name Matching for Niger localities.ipynb
+++ b/notebooks/Name Matching for Niger localities.ipynb
@@ -26,9 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -66,9 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -130,9 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -186,17 +180,41 @@
     "axHistx.hist(x , bins = 20 , label='Full Data' , normed = True)#, bins=bins)\n",
     "axHisty.hist(y, orientation='horizontal' , bins = 20   , normed = True)#, bins=bins\n",
     "\n",
-    "axHistx.hist(list(full_matching.jaro_dist[full_matching.matched  & (full_matching.match_type == 'match_1')])  , color = 'red' , label='Match 1' , normed = True , alpha = .5)\n",
-    "axHisty.hist(list(full_matching.levenshtein_dist[full_matching.matched & (full_matching.match_type == 'match_1')]), orientation='horizontal' ,  color = 'red' , normed = True , alpha = .5)\n",
+    "axHistx.hist(list(full_matching.jaro_dist[full_matching.matched  & \n",
+    "                                          (full_matching.match_type == 'match_1')])  , \n",
+    "             color = 'red' , label='Match 1' , normed = True , alpha = .5)\n",
+    "axHisty.hist(list(full_matching.levenshtein_dist[full_matching.matched & \n",
+    "                                                 (full_matching.match_type == 'match_1')]), \n",
+    "             orientation='horizontal' ,  color = 'red' , normed = True , alpha = .5)\n",
     "\n",
-    "axHistx.hist(list(full_matching.jaro_dist[full_matching.matched  & (full_matching.match_type == 'match_3')])  , color = 'yellow' , label='Match 3' , normed = True , alpha = .5)\n",
-    "axHisty.hist(list(full_matching.levenshtein_dist[full_matching.matched & (full_matching.match_type == 'match_3')]), orientation='horizontal' ,  color = 'yellow' , normed = True , alpha = .5)\n",
+    "axHistx.hist(list(full_matching.jaro_dist[full_matching.matched  & \n",
+    "                                          (full_matching.match_type == 'match_3')])  , \n",
+    "             color = 'yellow' , label='Match 3' , normed = True , alpha = .5)\n",
+    "axHisty.hist(list(full_matching.levenshtein_dist[full_matching.matched & \n",
+    "                                                 (full_matching.match_type == 'match_3')]), \n",
+    "             orientation='horizontal' ,  color = 'yellow' , normed = True , alpha = .5)\n",
     "\n",
     "axHistx.legend()\n",
     "axHistx.set_xlim(axScatter.get_xlim())\n",
     "axHisty.set_ylim(axScatter.get_ylim())\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    " ## Adding the validation data set in\n",
+    " \n",
+    " ## Adding in the cleaned strings\n",
+    " \n",
+    " Multiple possible thresholds depending on characteristics of the name.\n",
+    " \n",
+    " \n",
+    " Fair le validastion set from OSM"
    ]
   },
   {
@@ -226,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   },
   "toc": {
    "colors": {
